--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Business Oriented HTML Template</title>
+    <title>lozi core</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
     <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="tm-logo">
-                        <img src="img/lozi logo.jpg">
+                        <img src="img/lozicore logo_page-0001.png">
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
 
     <div class="container-fluid mt-7">
         <div class="row">
-            <div class="col-lg-5 col-md-6 mb-4">
+            <div class=" col-md-6 mb-4">
                 <h3 class="tm-title-gray mb-4">About Lozi Core</h3>
                 <hr class="mb-5 tm-hr">
                 <p class="mb-5">
@@ -186,12 +186,13 @@
                     regionally through strategic partnerships
                     Our team possesses advanced technical expertise that combines
                     innovation with deep understanding of the regional market </p>
+                    <img src="img/backkkk22.jpg" alt="Company Background Image" class="img-fluid2 tm-mb-3">
             </div>
             <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
                 <h3 class="tm-title-gray mb-4">Why Us?</h3>
                 <hr class="mb-5 tm-hr">
                 <p class="mb-5">
-                    <b>At Lozy Core, we believe that excellence in the world of artificial intelligence
+                    <b>At Lozi Core, we believe that excellence in the world of artificial intelligence
                         starts with understanding needs and crafting tailored solutions. That's why we
                         offer you:</b>
                 </p>
