--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Business Oriented CSS Template</title>
+    <title>lozi core</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="tm-logo">
-                        <img src="img/lozi logo.jpg">
+                        <img src="img/lozicore logo_page-0001.png">
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         <h3 class="tm-title-gray mb-4">Why Us?</h3>
                         <hr class="mb-5 tm-hr">
                         <p class="mb-5">
-                            <b>At Lozy Core, we believe that excellence in the world of artificial intelligence
+                            <b>At Lozi Core, we believe that excellence in the world of artificial intelligence
                                 starts with understanding needs and crafting tailored solutions. That's why we
                                 offer you:</b>
                         </p>
@@ -168,7 +168,8 @@
 
         </div>
         <!-- Services -->
-        <section class="col-lg-6">
+        <div class="row mb-6">
+            <section class="col-lg-6">
                 <h3 class="tm-title-gray mb-4">Training</h3>
                 <hr class="mb-5 tm-hr">
                 <div class="tm-strategy-box mb-5">
@@ -208,6 +209,18 @@
 
 
             </section>
+            <div class="col-lg-5">
+                <img src="img/backkkk22.jpg" alt="Image" class="img-fluid">
+                <div class="tm-bg-gray-dark tm-box-2">
+                    <h4 class="tm-text-primary tm-h3 mb-4">At Lozi Core we offer you:</h4>
+                    <p class="mb-5">Innovative Solutions</p>
+                    <p class="mb-5">Specialized Experts</p>
+                    <p class="mb-5">Commitment to Kingdom’s Standards</p>
+                    <p class="mb-5">Trusted Partnership</p>
+
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="parallax-2" class="parallax-window parallax-window-2" data-parallax="scroll"
@@ -217,7 +230,7 @@
                 <div class="col-12">
                     <div class="tm-overlay tm-bg-white">
                         <h4 class="tm-text-primary mb-5">Building Smarter Futures Together</h4>
-                        <p class="mb-5">At Lozy Core, we believe that excellence in the world of artificial intelligence
+                        <p class="mb-5">At Lozi Core, we believe that excellence in the world of artificial intelligence
                             starts with understanding needs and crafting tailored solutions. </p>
                         <a href="contact.html" class="btn btn-primary">Contact Us</a>
                     </div>
