--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Business Oriented - Services</title>
+    <title>lozi core</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="tm-logo">
-                        <img src="img/lozi logo.jpg">
+                        <img src="img/lozicore logo_page-0001.png">
                     </div>
                 </div>
             </div>
@@ -60,92 +60,87 @@
     </div>
 
     <div class="container-fluid mt-7">
-        <div class="row mb-6">
-            <div class="col-lg-7 mb-lg-0 mb-5 pr-lg-5">
-                <section class="mb-10">
-                    <div>
-                        <h3 class="tm-title-gray mb-4">Our services for your business growth</h3>
-                        <hr class="mb-5 tm-hr">
-                        <p class="mb-5">We provide a broad range of AI-driven solutions
-                            designed to support organizations in their digital
-                            transformation journey. With a strong commitment
-                            to quality, adaptability, and innovation, we tailor
-                            each service to meet the unique needs of our clients
-                        </p>
 
-                    </div>
-                </section>
-                <section>
-                    <h3 class="tm-title-gray mb-4">Our Services</h3>
+        <div class=" mb-lg-0 mb-5 pr-lg-5">
+            <section class="mb-10">
+                <div class="servicesint">
+                    <h3 class="tm-title-gray mb-4">Our services for your business growth</h3>
                     <hr class="mb-5 tm-hr">
-                    <div class="tm-services-box mb-60">
-                        <img src="img/chatbot.jpg" alt="Image" class="img-fluid tm-services-img">
-                        <div>
-                            <h4 class="tm-text-primary mb-4">AI Chatbot</h4>
-                            <p class="tm-strategy-text">-Custom chatbot development tailored to business needs.</p>
-                            <p class="tm-strategy-text">-Voice-enabled assistants (customer service, personal, and
-                                enterprise use).</p>
-                            <p class="tm-strategy-text">-Multi-language chatbots for global reach.</p>
-                            <p class="tm-strategy-text">-AI-powered customer support systems.</p>
-                            <p class="tm-strategy-text">-Low-latency chatbots for real-time interaction.</p>
-                            <p class="tm-strategy-text">-Chatbot integration with websites, mobile apps, and business
-                                platforms.</p>
+                    <p class="mb-5">We provide a broad range of AI-driven solutions
+                        designed to support organizations in their digital
+                        transformation journey. With a strong commitment
+                        to quality, adaptability, and innovation, we tailor
+                        each service to meet the unique needs of our clients
+                    </p>
+
+                </div>
+            </section>
+            <div class="container-fluid mt-7 mb-6">
+                <h3 class="tm-title-gray mb-4">Training</h3>
+                <hr class="mb-5 tm-hr">
+                <div class="row2">
+
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="tm-bg-gray tm-box">
+                            <img src="img/ai2.jpg" alt="Image" class="img-fluid mb-3 ">
+                            <h4 class="tm-text-primary tm-h3 mb-5">Large Language Models (LLMs)</h4>
+                            <p>-Fundamentals of Large Language Models (LLMs).</p>
+                            <p>-LLM and python programming.</p>
+                            <p>-Using LLMs with APIs for real-world applications.</p>
+                            <p>-Building AI-powered tools and assistants with LLMs.</p>
                         </div>
                     </div>
-                    <div class="tm-services-box mb-5">
-                        <img src="img/drone.jpg" alt="Image" class="img-fluid tm-services-img">
-                        <div>
-                            <h4 class="tm-text-primary mb-4">Drone Solutions</h4>
-                            <p class="tm-strategy-text">-Drone simulation and training (SITL, Ardupilot, Mission
-                                Planner,QGroundControl).</p>
-                            <p class="tm-strategy-text">-Programming autonomous drones with Python (ArduPilot,
-                                MAVSDK,DroneKit).</p>
-                            <p class="tm-strategy-text">-Vision-based drone applications (object tracking,
-                                mapping,exploration).</p>
-                            <p class="tm-strategy-text">-Robotic system integration with AI and computer vision.</p>
-                            <p class="tm-strategy-text">-Drone swarms. Centralized and decentralized.</p>
-                            </p>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="tm-bg-gray tm-box">
+                            <img src="img/ai1.jpg" alt="Image" class="img-fluid mb-3 ">
+                            <h4 class="tm-text-primary tm-h3 mb-5">Computer Vision & Image AI</h4>
+                            <p>-Image classification with Python.</p>
+                            <p>-Object detection (YOLO).</p>
+                            <p>-Image segmentation techniques.</p>
                         </div>
                     </div>
-                    <div class="tm-services-box mb-5">
-                        <img src="img/ai.jpg" alt="Image" class="img-fluid tm-services-img">
-                        <div>
-                            <h4 class="tm-text-primary mb-4">AI & Image Processing</h4>
-                            <p class="tm-strategy-text">-Image classification and object detection solutions.</p>
-                            <p class="tm-strategy-text">-Image segmentation for medical, industrial, and research
-                                applications.</p>
-                            <p class="tm-strategy-text">-Computer vision systems for surveillance, retail, and
-                                automation.</p>
-                            <p class="tm-strategy-text">-AI-powered quality inspection (e.g., detecting defects in
-                                products).</p>
-                            <p class="tm-strategy-text">-End-to-end AI solutions: from model development to deployment.
-                            </p>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="tm-bg-gray tm-box">
+                            <img src="img/robot1.jpg" alt="Image" class="img-fluid mb-3 ">
+                            <h4 class="tm-text-primary tm-h3 mb-5">Hands-on Python for AI & Robotics</h4>
+                            <p>-Python for beginners in AI applications.</p>
+                            <p>-Practical projects combining LLMs,computer vision, and robotics.</p>
                         </div>
                     </div>
-                    <div class="tm-services-box mb-5">
-                        <img src="img/it.jpg" alt="Image" class="img-fluid tm-services-img">
-                        <div>
-                            <h4 class="tm-text-primary mb-4">IT Services & Solutions</h4>
-                            <p class="tm-strategy-text">-IT infrastructure setup and support.</p>
-                            <p class="tm-strategy-text">-System integration and automation.</p>
-                            <p class="tm-strategy-text">-API development and integration.</p>
-                            <p class="tm-strategy-text">-Cloud-based solutions for AI and IT systems.</p>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="tm-bg-gray tm-box">
+                            <img src="img/chatbot.jpg" alt="Image" class="img-fluid mb-3 ">
+                            <h4 class="tm-text-primary tm-h3 mb-5">Chatbots & Conversational AI</h4>
+                            <p>-Building intelligent chatbots from scratch using Python.</p>
+                            <p>-Voice-based assistants and personal AI companions.</p>
+                            <p>-Customer service and business chatbots.</p>
+                            <p>-Integrating chatbots with APIs, databases, and your custom data.</p>
                         </div>
                     </div>
-                </section>
-            </div>
-            <div class="col-lg-5">
-                <img src="img/backkkk22.jpg" alt="Image" class="img-fluid">
-                <div class="tm-bg-gray-dark tm-box-2">
-                    <h4 class="tm-text-primary tm-h3 mb-4">At Lozy Core we offer you:</h4>
-                    <p class="mb-5">Innovative Solutions</p>
-                    <p class="mb-5">Specialized Experts</p>
-                    <p class="mb-5">Commitment to Kingdom’s Standards</p>
-                    <p class="mb-5">Trusted Partnership</p>
+
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="tm-bg-gray tm-box">
+                            <img src="img/drone.jpg" alt="Image" class="img-fluid mb-3 ">
+                            <h4 class="tm-text-primary tm-h3 mb-5">Drone Programming & Simulation</h4>
+                            <p>-Introduction to UAVs and drone technology.</p>
+                            <p>-Programming drones with Python (ArduPilot, DroneKit, MAVSDK).</p>
+                            <p>-Operating drones in simulation (SITL, Ardupilot, AirSim, Mission Planner,
+                                QGroundControl).</p>
+                            <p>-Autonomous flight planning and control.</p>
+
+                        </div>
+                    </div>
 
                 </div>
             </div>
         </div>
+
+
     </div>
     <div id="parallax-3" class="parallax-window parallax-window-2" data-parallax="scroll"
         data-image-src="img/fiber.jpg">
@@ -153,7 +148,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="tm-overlay tm-bg-black-transparent p-5 ml-auto mr-0">
-                        <p class="mb-0 text-white">At Lozy Core, we believe that excellence in the world of artificial
+                        <p class="mb-0 text-white">At Lozi Core, we believe that excellence in the world of artificial
                             intelligence starts with understanding needs and crafting tailored solutions.</p>
                     </div>
                 </div>
@@ -161,69 +156,69 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-7 mb-6">
-        <h3 class="tm-title-gray mb-4">Training</h3>
-        <hr class="mb-5 tm-hr">
-        <div class="row">
 
-
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <img src="img/ai2.jpg" alt="Image" class="img-fluid mb-3 ">
-                    <h4 class="tm-text-primary tm-h3 mb-5">Large Language Models (LLMs)</h4>
-                    <p>-Fundamentals of Large Language Models (LLMs).</p>
-                    <p>-LLM and python programming.</p>
-                    <p>-Using LLMs with APIs for real-world applications.</p>
-                    <p>-Building AI-powered tools and assistants with LLMs.</p>
+    <div class="container-fluid mt-7">
+        <section>
+            <h3 class="tm-title-gray mb-4">Our Services</h3>
+            <hr class="mb-5 tm-hr">
+            <div class="row">
+                <div class="tm-services-box mb-60">
+                    <img src="img/chatbot.jpg" alt="Image" class="img-fluid tm-services-img">
+                    <div>
+                        <h4 class="tm-text-primary mb-4">AI Chatbot</h4>
+                        <p class="tm-strategy-text">-Custom chatbot development tailored to business needs.</p>
+                        <p class="tm-strategy-text">-Voice-enabled assistants (customer service, personal, and
+                            enterprise use).</p>
+                        <p class="tm-strategy-text">-Multi-language chatbots for global reach.</p>
+                        <p class="tm-strategy-text">-AI-powered customer support systems.</p>
+                        <p class="tm-strategy-text">-Low-latency chatbots for real-time interaction.</p>
+                        <p class="tm-strategy-text">-Chatbot integration with websites, mobile apps, and business
+                            platforms.</p>
+                    </div>
+                </div>
+                <div class="tm-services-box mb-5">
+                    <img src="img/drone.jpg" alt="Image" class="img-fluid tm-services-img">
+                    <div>
+                        <h4 class="tm-text-primary mb-4">Drone Solutions</h4>
+                        <p class="tm-strategy-text">-Drone simulation and training (SITL, Ardupilot, Mission
+                            Planner,QGroundControl).</p>
+                        <p class="tm-strategy-text">-Programming autonomous drones with Python (ArduPilot,
+                            MAVSDK,DroneKit).</p>
+                        <p class="tm-strategy-text">-Vision-based drone applications (object tracking,
+                            mapping,exploration).</p>
+                        <p class="tm-strategy-text">-Robotic system integration with AI and computer vision.</p>
+                        <p class="tm-strategy-text">-Drone swarms. Centralized and decentralized.</p>
+                        </p>
+                    </div>
+                </div>
+                <div class="tm-services-box mb-5">
+                    <img src="img/ai.jpg" alt="Image" class="img-fluid tm-services-img">
+                    <div>
+                        <h4 class="tm-text-primary mb-4">AI & Image Processing</h4>
+                        <p class="tm-strategy-text">-Image classification and object detection solutions.</p>
+                        <p class="tm-strategy-text">-Image segmentation for medical, industrial, and research
+                            applications.</p>
+                        <p class="tm-strategy-text">-Computer vision systems for surveillance, retail, and
+                            automation.</p>
+                        <p class="tm-strategy-text">-AI-powered quality inspection (e.g., detecting defects in
+                            products).</p>
+                        <p class="tm-strategy-text">-End-to-end AI solutions: from model development to deployment.
+                        </p>
+                    </div>
+                </div>
+                <div class="tm-services-box mb-5">
+                    <img src="img/it.jpg" alt="Image" class="img-fluid tm-services-img">
+                    <div>
+                        <h4 class="tm-text-primary mb-4">IT Services & Solutions</h4>
+                        <p class="tm-strategy-text">-IT infrastructure setup and support.</p>
+                        <p class="tm-strategy-text">-System integration and automation.</p>
+                        <p class="tm-strategy-text">-API development and integration.</p>
+                        <p class="tm-strategy-text">-Cloud-based solutions for AI and IT systems.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <img src="img/ai1.jpg" alt="Image" class="img-fluid mb-3 ">
-                    <h4 class="tm-text-primary tm-h3 mb-5">Computer Vision & Image AI</h4>
-                    <p>-Image classification with Python.</p>
-                    <p>-Object detection (YOLO).</p>
-                    <p>-Image segmentation techniques.</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <img src="img/robot1.jpg" alt="Image" class="img-fluid mb-3 ">
-                    <h4 class="tm-text-primary tm-h3 mb-5">Hands-on Python for AI & Robotics</h4>
-                    <p>-Python for beginners in AI applications.</p>
-                    <p>-Practical projects combining LLMs,computer vision, and robotics.</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <img src="img/chatbot.jpg" alt="Image" class="img-fluid mb-3 ">
-                    <h4 class="tm-text-primary tm-h3 mb-5">Chatbots & Conversational AI</h4>
-                    <p>-Building intelligent chatbots from scratch using Python.</p>
-                    <p>-Voice-based assistants and personal AI companions.</p>
-                    <p>-Customer service and business chatbots.</p>
-                    <p>-Integrating chatbots with APIs, databases, and your custom data.</p>
-                </div>
-            </div>
-
-
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <img src="img/drone.jpg" alt="Image" class="img-fluid mb-3 ">
-                    <h4 class="tm-text-primary tm-h3 mb-5">Drone Programming & Simulation</h4>
-                    <p>-Introduction to UAVs and drone technology.</p>
-                    <p>-Programming drones with Python (ArduPilot, DroneKit, MAVSDK).</p>
-                    <p>-Operating drones in simulation (SITL, Ardupilot, AirSim, Mission Planner, QGroundControl).</p>
-                    <p>-Autonomous flight planning and control.</p>
-
-                </div>
-            </div>
-
-        </div>
+        </section>
     </div>
-
     <footer class="container-fluid">
         <div class="row">
             <p class="col-lg-9 col-md-8 mb-5 mb-md-0">
