logo and oter changes

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="tm-logo">
-                        <img src="img/lozicore logo_page-0001.png">
+                        <img src="img/lozi logo.jpg">
                     </div>
                 </div>
             </div>
@@ -67,113 +67,15 @@
                     <p class="mb-4">We are shaping the next chapter of Saudi innovation. By blending deep technical
                         expertise with a clear national vision, we design intelligent solutions that transform
                         challenges into opportunities.</p>
-                    <p class="mb-5">Together, we’re building a smarter future — for our communities, our industries, and our world.</p>
+                    <p class="mb-5">Together, we’re building a smarter future — for our communities, our industries, and
+                        our world.</p>
                     <div class="text-right">
-                        <a href="#" class="btn btn-primary">Read More</a>
+                        <a href="#Vesion" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </section>
 
-            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-                <figure class="tm-about-person-layout">
-                    <img src="img/about-01.jpg" alt="Image" class="img-fluid mb-5">
-                    <figcaption>
-                        <h3 class="mb-4">
-                            <span class="text-primary">amjad mohammad</span>&nbsp;
-                            <span class="small tm-text-gray">(Co-founder / CTO)</span>
-                        </h3>
-                        <p>In bibendum dignissim nulla, vitae rutrum enim interdum quis. Quisque erat velit, gravida
-                            quis lectus sit amet, mattis ullamcorper diam.</p>
-                    </figcaption>
-                </figure>
-            </div>
-
-                        <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-                <figure class="tm-about-person-layout">
-                    <img src="img/about-02.jpg" alt="Image" class="img-fluid mb-5">
-                    <figcaption>
-                        <h3 class="mb-4">
-                            <span class="text-primary">amjad mohammad</span>&nbsp;
-                            <span class="small tm-text-gray">(Co-founder / CTO)</span>
-                        </h3>
-                        <p>In bibendum dignissim nulla, vitae rutrum enim interdum quis. Quisque erat velit, gravida
-                            quis lectus sit amet, mattis ullamcorper diam.</p>
-                    </figcaption>
-                </figure>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-                <figure class="effect-milo tm-about-person tm-about-person-layout">
-                    <img src="img/about-03.jpg" alt="Image" class="img-fluid">
-                    <figcaption>
-                        <h2><span>ahmad mohammad</span>&nbsp;&nbsp;(Marketing Director)</h2>
-                        <p class="mb-4">Manages the marketing function with emphasis on championing the brand and
-                            expanding the customer base.</p>
-                        <p>
-                            <a href="https://linkedin.com" class="tm-social-link">
-                                <i class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                            <a href="https://x.com" class="tm-social-link">
-                                <i class="fab fa-square-x-twitter fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                            <a href="https://youtube.com" class="tm-social-link">
-                                <i class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                        </p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-                <figure class="effect-milo tm-about-person tm-about-person-layout">
-                    <img src="img/about-04.jpg" alt="Image" class="img-fluid">
-                    <figcaption>
-                        <h2><span>ali mohammad</span>&nbsp;&nbsp;(Finance Director)</h2>
-                        <p class="mb-4">Plans and manages all large scale financial functions of the business.</p>
-                        <p>
-                            <a href="https://linkedin.com" class="tm-social-link">
-                                <i class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                            <a href="https://x.com" class="tm-social-link">
-                                <i class="fab fa-square-x-twitter fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                            <a href="https://youtube.com" class="tm-social-link">
-                                <i class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                        </p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-                <figure class="effect-milo tm-about-person tm-about-person-layout">
-                    <img src="img/about-05.jpg" alt="Image" class="img-fluid">
-                    <figcaption>
-                        <h2><span>mohammad ali</span>&nbsp;&nbsp;(Creative Director)</h2>
-                        <p class="mb-4">Implements concepts, guidelines and strategies in various creative projects and
-                            oversees them to completion</p>
-                        <p>
-                            <a href="https://linkedin.com" class="tm-social-link">
-                                <i class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                            <a href="https://x.com" class="tm-social-link">
-                                <i class="fab fa-square-x-twitter fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                            <a href="https://youtube.com" class="tm-social-link">
-                                <i class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"></i>
-                            </a>
-                        </p>
-                    </figcaption>
-                </figure>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-    <div class="container-fluid mt-7">
-        <div class="row">
-            <div class=" col-md-6 mb-4">
+            <div class=" col-md-5 mb-4">
                 <h3 class="tm-title-gray mb-4">About Lozi Core</h3>
                 <hr class="mb-5 tm-hr">
                 <p class="mb-5">
@@ -186,9 +88,21 @@
                     regionally through strategic partnerships
                     Our team possesses advanced technical expertise that combines
                     innovation with deep understanding of the regional market </p>
-                    <img src="img/backkkk22.jpg" alt="Company Background Image" class="img-fluid2 tm-mb-3">
+                <img src="img/backkkk22.jpg" alt="Company Background Image" class="img-fluid2 tm-mb-3">
             </div>
-            <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
+
+
+        </div>
+    </div>
+
+
+
+
+
+    <div class="container-fluid mt-7">
+        <div class="row0">
+
+            <div class="col-lg-5 col-md-5 mb-4 mr-0 ">
                 <h3 class="tm-title-gray mb-4">Why Us?</h3>
                 <hr class="mb-5 tm-hr">
                 <p class="mb-5">
@@ -213,7 +127,8 @@
                     and tangible results.
                 </p>
             </div>
-            <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
+
+            <div id="Vesion" class="col-lg-5 col-md-5 mb-4 mr-0 mr-auto ml-sm-3">
                 <h3 class="tm-title-gray mb-4">Our Vesion</h3>
                 <hr class="mb-5 tm-hr">
                 <p class="mb-5">
@@ -235,7 +150,8 @@
                 </p>
 
             </div>
-            <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
+
+            <div class="col-lg-5 col-md-5 mb-4 mr-0 ">
                 <h3 class="tm-title-gray mb-4">Our Services</h3>
                 <hr class="mb-5 tm-hr">
                 <p class="mb-5">
@@ -256,6 +172,7 @@
 
 
             </div>
+
         </div>
     </div>
 
