--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="tm-logo">
-                        <img src="img/lozicore logo_page-0001.png">
+                        <img src="img/lozi logo.jpg">
                     </div>
                 </div>
             </div>
