--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/drone5.jpg">
+    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/drone5.jpg" >
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <div class="tm-logo">
-                        <img src="img/lozicore logo_page-0001.png">
+                        <img src="img/lozi logo.jpg">
                     </div>
                 </div>
             </div>
@@ -60,14 +60,27 @@
     </div>
 
     <div class="container-fluid mt-7">
-        <div class="row mb-6">
+        <div class="row mb-66">
+            <section class="mb-10">
+                <div class="servicesint">
+                    <h3 class="tm-title-gray mb-4 ">Lozi Core</h3>
+                    <hr class="mb-5 tm-hr">
+                    <p class="mb-55">We provide a broad range of AI-driven solutions
+                        designed to support organizations in their digital
+                        transformation journey. With a strong commitment
+                        to quality, adaptability, and innovation, we tailor
+                        each service to meet the unique needs of our clients
+                    </p>
+
+                </div>
+            </section>
             <section class="col-lg-6 mb-lg-0 mb-5">
                 <div class="tm-intro">
-                    <h3 class="tm-title-gray mb-4">Who we are?</h3>
+                    <h3 class="tm-title-gray mb-4 ">Who we are?</h3>
                     <hr class="mb-5 tm-hr">
                     <p class="mb-5">A Saudi institution specializing in providing artificial intelligence
                         solutions and technologies, aiming to empower both government
-                        and private sectors to transition towards smart and efficient
+                        and private sectors to transition towards smart efficient
                         systems.</p>
                     <p class="mb-5">We offer our services within the Kingdom and aim to expand
                         regionally through strategic partnerships
@@ -77,10 +90,10 @@
                 </div>
             </section>
             <section class="col-lg-6">
-                <h3 class="tm-title-gray mb-4">Our Services</h3>
+                <h3 class="tm-title-gray mb-4 ">Our Services</h3>
                 <hr class="mb-5 tm-hr">
                 <div class="tm-strategy-box mb-5">
-                    <img src="img/drone.jpg" alt="Image" class="img-fluid tm-strategy-img">
+                    <img src="img/drone4.jpg" alt="Image" class="img-fluid tm-strategy-img">
                     <div class="tm-text-primary">
                         <h4>Drone Solutions</h4>
                     </div>
@@ -114,7 +127,7 @@
             <div class="container-fluid mt-7">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
-                        <h3 class="tm-title-gray mb-4">Why Us?</h3>
+                        <h3 class="tm-title-gray mb-4 ">Why Us?</h3>
                         <hr class="mb-5 tm-hr">
                         <p class="mb-5">
                             <b>At Lozi Core, we believe that excellence in the world of artificial intelligence
@@ -139,7 +152,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
-                        <h3 class="tm-title-gray mb-4">Our Vesion</h3>
+                        <h3 class="tm-title-gray mb-4 ">Our Vesion</h3>
                         <hr class="mb-5 tm-hr">
                         <p class="mb-5">
                             <b>Our vision is to become a leading Saudi institution in providing
@@ -170,7 +183,7 @@
         <!-- Services -->
         <div class="row mb-6">
             <section class="col-lg-6">
-                <h3 class="tm-title-gray mb-4">Training</h3>
+                <h3 class="tm-title-gray mb-4 ">Training</h3>
                 <hr class="mb-5 tm-hr">
                 <div class="tm-strategy-box mb-5">
                     <img src="img/ai2.jpg" alt="Image" class="img-fluid tm-strategy-img">
@@ -201,7 +214,7 @@
                 </div>
 
                 <div class="tm-strategy-box mb-5">
-                    <img src="img/drone.jpg" alt="Image" class="img-fluid tm-strategy-img">
+                    <img src="img/drone4.jpg" alt="Image" class="img-fluid tm-strategy-img">
                     <div class="tm-text-primary">
                         <h4>Drone Programming & Simulation</h4>
                     </div>
